--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,10 @@
 		<meta name="viewport" content="width=device-width" />
 		<script src="https://kit.fontawesome.com/78a9146bce.js" crossorigin="anonymous"></script>
 		<script src="https://player.vimeo.com/api/player.js"></script>
+		<link rel="stylesheet" href="https://use.typekit.net/oje3cao.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
